--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@500;600&family=Roboto+Mono:wght@500;700&family=Work+Sans:wght@700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@500;600&family=Roboto+Mono:wght@400;500;700&family=Work+Sans:wght@700;800&display=swap');
 
 @tailwind base;
 @tailwind components;
@@ -16,6 +16,9 @@
     }
     .inter-semibold {
         @apply font-inter font-semibold;
+    }
+    .mono-regular {
+        @apply font-mono font-normal;
     }
     .mono-medium {
         @apply font-mono font-medium;
