--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,18 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-@layer components {
-    .mono-regular {
-        @apply font-mono font-normal;
-    }
-    .mono-medium {
-        @apply font-mono font-medium;
-    }
-    .mono-bold {
-        @apply font-mono font-bold;
-    }
-}
-
 html, body {
     height: 100%;
 }
@@ -23,10 +11,9 @@ html, body {
 }
 
 .no-scrollbar {
-    -ms-overflow-style: none;  /* IE and Edge */
     scrollbar-width: none;  /* Firefox */
 }
 
 .mask {
-    -webkit-mask-image: linear-gradient(to right, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 1) 15%, rgba(0, 0, 0, 1) 85%, rgba(0, 0, 0, 0) 100%);
+    mask-image: linear-gradient(to right, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 1) 15%, rgba(0, 0, 0, 1) 85%, rgba(0, 0, 0, 0) 100%);
 }
